--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +15,9 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
@@ -20,17 +25,81 @@
 
 </head>
 
-<body>
-  <h1>HOLA MUNDO</h1>
 
-  <div class="container-wa">
-    <div class="floating-button">
-      <a href="https://wa.me/2996037510?text=I'm%20interested%20in%20your%20car%20for%20sale" id="icono-whatsapp"><i
-          class="bi bi-whatsapp icon wa text-white"></i> </a>
-          <span>test</span>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand mx-3" id="titulo" href="#">NORDENSTROM
+          MATIAS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
+
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">BIENVENIDO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">QUIENES SOMOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">SERVICIOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">HONORARIOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">CONTACTO</a>
+            </li>
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <div class="container py-3">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner m-auto">
+        <div class="carousel-item active">
+          <img
+            src="https://plus.unsplash.com/premium_photo-1663050647660-87054fd8955f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80"
+            class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://plus.unsplash.com/premium_photo-1661559051049-f9e147c7a90b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1032&q=80"
+            class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://images.unsplash.com/photo-1505664194779-8beaceb93744?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80"
+            class="d-block w-100" alt="...">
+        </div>
+      </div>
     </div>
-    <div>
+    <div class="py-5" style="background-color: rgb(232, 64, 64);">
+
+      <span class="fs-3  fst-italic text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora
+        eum illum omnis accusantium rerum
+        assumenda
+        iure, quod ad architecto, corporis, veniam officiis debitis perspiciatis ullam aliquid deserunt vero.
+        Rerum.</span>
+    </div>
+
+    <!-- boton wapp -->
+    <div class="container-wa">
+      <div class="floating-button">
+        <a href="https://wa.me/2996037510?text=I'm%20interested%20in%20your%20car%20for%20sale" id="icono-whatsapp"><i
+            class="bi bi-whatsapp icon wa text-white"></i> </a>
+      </div>
+      <div></div>
 </body>
+
 
 
 </html>
