--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg color_logo p-3">
       <div class="container-fluid">
-        <a class="navbar-brand mx-3" id="titulo" href="#">NORDENSTROM
+        <a class="navbar-brand mx-3 text-white" id="titulo" href="#">NORDENSTROM
           MATIAS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,19 +41,19 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">BIENVENIDO</a>
+              <a class="nav-link active text-white" aria-current="page" href="#">BIENVENIDO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">QUIENES SOMOS</a>
+              <a class="nav-link text-white" href="#">QUIENES SOMOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">SERVICIOS</a>
+              <a class="nav-link text-white">SERVICIOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">HONORARIOS</a>
+              <a class="nav-link text-white">HONORARIOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">CONTACTO</a>
+              <a class="nav-link text-white">CONTACTO</a>
             </li>
           </ul>
 
