--- a/index.html
+++ b/index.html
@@ -2,194 +2,233 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nordenstrom Matias</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nordenstrom Matias</title>
 
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 
-  <!-- Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/style.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css">
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg color_logo">
-      <div class="container-fluid">
-        <a class="navbar-brand mx-3 text-white" id="titulo" href="#"><img src="img/MATÍAS NORDENSTROM.png" alt=""
-            style="max-width: 200px;"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <header>
+        <nav class="navbar navbar-expand-lg fondo-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand mx-3 text-white" id="titulo" href="#"><img src="img/MATÍAS NORDENSTROM.png" alt=""
+                        style="max-width: 200px;"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
 
-            <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="#">BIENVENIDO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">QUIENES SOMOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white">SERVICIOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white">HONORARIOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white">CONTACTO</a>
-            </li>
-          </ul>
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="#">BIENVENIDO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">QUIENES SOMOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white">SERVICIOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white">HONORARIOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white">CONTACTO</a>
+                        </li>
+                    </ul>
 
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section id="hero" class="container">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/abogados223-696x392.jpg" height="500" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/estudio-juridico-duprat-pellegrini-equipo.jpg" height="500" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/juridico.png" height="500" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+            <div class="py-5">
+                <p class="fs-3 fst-italic text-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora eum illum omnis accusantium rerum
+                    assumenda iure, quod ad architecto, corporis, veniam officiis debitis perspiciatis ullam aliquid deserunt
+                    vero. Rerum.
+                </p>
+            </div>
+        </section>
+
+        <section id="quienes-somos" class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>Quienes somos</h2>
+                    <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en la
+                        confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y oportuna de
+                        cualquier tipo de controversia o contingencia que puedan experimentar nuestros clientes.</p>
+                    <p>Nos esforzamos para representar a nuestros clientes de la mejor manera posible, tanto en la instancia
+                        extrajudicial, como judicialmente.</p>
+                    <button>Conozca mas</button>
+                </div>
+                <div class="col">Imagen</div>
+            </div>
+        </section>
+
+        <section id="nuestros-servicios" class="container">
+            <h2>Nuestros Servicios</h2>
+            <h3>Atendemos en Neuquén y Río Negro</h3>
+            <div class="row justify-content-center align-items-center g-2">
+                <div class="col-4">Column</div>
+                <div class="col-4">Column</div>
+                <div class="col-4">Column</div>
+                <div class="col-4">Column</div>
+                <div class="col-4">Column</div>
+            </div>
+        </section>
+
+        <section id="honorarios" class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>honorarios</h2>
+                    <p>Gastos Iniciales Bonificados</p>
+                    <p>Hasta 6 cuotas sin interes</p>
+                </div>
+
+                <div class="col">
+                    <p>Se bonifica el importe de la primera consulta al iniciar el trámite con nosotros.</p>
+                    <hr>
+                    <p>Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar los honorarios
+                        profesionales por el servicio jurídico prestado.</p>
+                    <hr>
+                    <p>Los abogados nos regimos por la Ley de honorarios, en Neuquén es la Ley N°1594 y en Rio Negro es la Ley
+                        N°2212</p>
+                    <div class="row">
+                        <div class="col">Ley 1</div>
+                        <div class="col">ley 2</div>
+                    </div>
+                </div>
+                <p>Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán encontrarlo publicado en los
+                    colegios de abogados de cada provincia. Si tienen alguna consulta, no duden en comunicarse con nosotros para
+                    asesorarse.</p>
+            </div>
+        </section>
+
+        <section id="contacto" class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>Contacto</h2>
+                    <p>Antonella Lopez Estudio Jurídico</p>
+                    <p>Juan B. Justo 730, Neuquén.
+                        Tel.: (299) 155068282
+                        Mail: estudiolopezantonella@gmail.com</p>
+                    <p>Lunes a Viernes de 9 a 17hs.</p>
+                    <p>Atención online por video llamada
+                        o en persona con turno previo.
+                        Próximamente oficina en calle Belgrano 454,
+                        3º Piso, oficina 2.
+                        Neuquén Capital.</p>
+                </div>
+                <div class="col">
+                    <h3>Dejenos su mensaje</h3>
+                    <p>Nombre</p>
+                    <p>Email</p>
+                    <p>Telefono</p>
+                    <p>Mensaje</p>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="container-fluid fondo-dark py-4">
+        <div class="container text-white mt-2">
+            <div class="row justify-content-center g-2">
+                <div class="col">
+                    <h3 class="pb-3">MATÍAS NORDENSTROM</h3>
+                    <p>Bienvenido</p>
+                    <p>Quienes somos</p>
+                    <p>Servicios</p>
+                    <p>Honorarios</p>
+                    <p>Contacto</p>
+                </div>
+                <div class="col">
+                    <h3 class="pb-3">CONTACTO</h3>
+                    <p>estudiolopezantonella@gmail.com</p>
+                    <p>Juan B. Justo 730, Neuquen</p>
+                    <p>0299 155068282</p>
+                    <p>+5492995068282</p>
+                </div>
+                <div class="col">
+                    <h3 class="text-center pb-3">REDES</h3>
+
+                    <ul class="nav justify-content-center  ">
+                        <li class="nav-item">
+                            <a class="nav-link fs-3 text-gold" href="#"><i class="bi bi-whatsapp"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-3 text-gold" href="#"><i class="bi bi-twitter"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-3 text-gold" href="#"><i class="bi bi-facebook"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-3 text-gold" href="#"><i class="bi bi-linkedin"></i></a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
         </div>
-      </div>
-    </nav>
-  </header>
-  <main>
-    <section id="hero" class="container">
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/abogados223-696x392.jpg" height="500" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="img/estudio-juridico-duprat-pellegrini-equipo.jpg" height="500" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="img/juridico.png" height="500" class="d-block w-100" alt="...">
-          </div>
+    </footer>
+
+    <!-- Boton Whatsapp -->
+    <div class="container-wa">
+        <div class="floating-button">
+            <a href="https://wa.me/2996037510?text=I'm%20interested%20in%20your%20car%20for%20sale" id="icono-whatsapp"
+                target="_blank">
+                <i class="bi bi-whatsapp icon wa text-white"></i>
+            </a>
         </div>
-
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-
-      <div class="py-5">
-        <p class="fs-3 fst-italic text-center">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora eum illum omnis accusantium rerum
-          assumenda iure, quod ad architecto, corporis, veniam officiis debitis perspiciatis ullam aliquid deserunt
-          vero. Rerum.
-        </p>
-      </div>
-    </section>
-
-    <section id="quienes-somos" class="container">
-      <div class="row">
-        <div class="col">
-          <h2>Quienes somos</h2>
-          <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en la
-            confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y oportuna de
-            cualquier tipo de controversia o contingencia que puedan experimentar nuestros clientes.</p>
-          <p>Nos esforzamos para representar a nuestros clientes de la mejor manera posible, tanto en la instancia
-            extrajudicial, como judicialmente.</p>
-          <button>Conozca mas</button>
-        </div>
-        <div class="col">Imagen</div>
-      </div>
-    </section>
-
-    <section id="nuestros-servicios" class="container">
-      <h2>Nuestros Servicios</h2>
-      <h3>Atendemos en Neuquén y Río Negro</h3>
-      <div class="row justify-content-center align-items-center g-2">
-        <div class="col-4">Column</div>
-        <div class="col-4">Column</div>
-        <div class="col-4">Column</div>
-        <div class="col-4">Column</div>
-        <div class="col-4">Column</div>
-      </div>
-    </section>
-
-    <section id="honorarios" class="container">
-      <div class="row">
-        <div class="col">
-          <h2>honorarios</h2>
-          <p>Gastos Iniciales Bonificados</p>
-          <p>Hasta 6 cuotas sin interes</p>
-        </div>
-
-        <div class="col">
-          <p>Se bonifica el importe de la primera consulta al iniciar el trámite con nosotros.</p>
-          <hr>
-          <p>Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar los honorarios
-            profesionales por el servicio jurídico prestado.</p>
-          <hr>
-          <p>Los abogados nos regimos por la Ley de honorarios, en Neuquén es la Ley N°1594 y en Rio Negro es la Ley
-            N°2212</p>
-          <div class="row">
-            <div class="col">Ley 1</div>
-            <div class="col">ley 2</div>
-          </div>
-        </div>
-        <p>Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán encontrarlo publicado en los
-          colegios de abogados de cada provincia. Si tienen alguna consulta, no duden en comunicarse con nosotros para
-          asesorarse.</p>
-      </div>
-    </section>
-
-    <section id="contacto" class="container">
-      <div class="row">
-        <div class="col">
-          <h2>Contacto</h2>
-          <p>Antonella Lopez Estudio Jurídico</p>
-          <p>Juan B. Justo 730, Neuquén.
-            Tel.: (299) 155068282
-            Mail: estudiolopezantonella@gmail.com</p>
-          <p>Lunes a Viernes de 9 a 17hs.</p>
-          <p>Atención online por video llamada
-            o en persona con turno previo.
-            Próximamente oficina en calle Belgrano 454,
-            3º Piso, oficina 2.
-            Neuquén Capital.</p>
-        </div>
-        <div class="col">
-          <h3>Dejenos su mensaje</h3>
-          <p>Nombre</p>
-          <p>Email</p>
-          <p>Telefono</p>
-          <p>Mensaje</p>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer>
-
-  </footer>
-
-  <div class="container-wa">
-    <div class="floating-button">
-      <a href="https://wa.me/2996037510?text=I'm%20interested%20in%20your%20car%20for%20sale" id="icono-whatsapp"
-        target="_blank">
-        <i class="bi bi-whatsapp icon wa text-white"></i>
-      </a>
     </div>
-  </div>
 
 
 </body>
