--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 </button>
             </div>
 
-            <div class="py-5">
-                <p class="fs-3 fst-italic text-center">
+            <div class="py-4 fondo-dark">
+                <p class="fs-3 px-5 fst-italic text-center text-white">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora eum illum omnis accusantium rerum
                     assumenda iure, quod ad architecto, corporis, veniam officiis debitis perspiciatis ullam aliquid deserunt
                     vero. Rerum.
