--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -29,10 +31,11 @@
     <header>
         <nav class="navbar navbar-expand-lg fondo-dark">
             <div class="container-fluid">
-                <a class="navbar-brand mx-3 text-white" id="titulo" href="#"><img src="img/MATÍAS NORDENSTROM.png" alt=""
-                        style="max-width: 200px;"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand mx-3 text-white" id="titulo" href="#"><img src="img/MATÍAS NORDENSTROM.png"
+                        alt="" style="max-width: 200px;"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -68,7 +71,8 @@
                         <img src="img/abogados223-696x392.jpg" height="500" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/estudio-juridico-duprat-pellegrini-equipo.jpg" height="500" class="d-block w-100" alt="...">
+                        <img src="img/estudio-juridico-duprat-pellegrini-equipo.jpg" height="500" class="d-block w-100"
+                            alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="img/juridico.png" height="500" class="d-block w-100" alt="...">
@@ -90,8 +94,10 @@
 
             <div class="py-4 fondo-dark">
                 <p class="fs-3 px-5 fst-italic text-center text-white">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora eum illum omnis accusantium rerum
-                    assumenda iure, quod ad architecto, corporis, veniam officiis debitis perspiciatis ullam aliquid deserunt
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora eum illum omnis accusantium
+                    rerum
+                    assumenda iure, quod ad architecto, corporis, veniam officiis debitis perspiciatis ullam aliquid
+                    deserunt
                     vero. Rerum.
                 </p>
             </div>
@@ -101,10 +107,13 @@
             <div class="row">
                 <div class="col">
                     <h2>Quienes somos</h2>
-                    <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en la
-                        confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y oportuna de
+                    <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en
+                        la
+                        confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y
+                        oportuna de
                         cualquier tipo de controversia o contingencia que puedan experimentar nuestros clientes.</p>
-                    <p>Nos esforzamos para representar a nuestros clientes de la mejor manera posible, tanto en la instancia
+                    <p>Nos esforzamos para representar a nuestros clientes de la mejor manera posible, tanto en la
+                        instancia
                         extrajudicial, como judicialmente.</p>
                     <button>Conozca mas</button>
                 </div>
@@ -135,18 +144,22 @@
                 <div class="col">
                     <p>Se bonifica el importe de la primera consulta al iniciar el trámite con nosotros.</p>
                     <hr>
-                    <p>Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar los honorarios
+                    <p>Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar los
+                        honorarios
                         profesionales por el servicio jurídico prestado.</p>
                     <hr>
-                    <p>Los abogados nos regimos por la Ley de honorarios, en Neuquén es la Ley N°1594 y en Rio Negro es la Ley
+                    <p>Los abogados nos regimos por la Ley de honorarios, en Neuquén es la Ley N°1594 y en Rio Negro es
+                        la Ley
                         N°2212</p>
                     <div class="row">
                         <div class="col">Ley 1</div>
                         <div class="col">ley 2</div>
                     </div>
                 </div>
-                <p>Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán encontrarlo publicado en los
-                    colegios de abogados de cada provincia. Si tienen alguna consulta, no duden en comunicarse con nosotros para
+                <p>Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán encontrarlo
+                    publicado en los
+                    colegios de abogados de cada provincia. Si tienen alguna consulta, no duden en comunicarse con
+                    nosotros para
                     asesorarse.</p>
             </div>
         </section>
