--- a/index.html
+++ b/index.html
@@ -124,12 +124,53 @@
         <section id="nuestros-servicios" class="container">
             <h2>Nuestros Servicios</h2>
             <h3>Atendemos en Neuquén y Río Negro</h3>
-            <div class="row justify-content-center align-items-center g-2">
-                <div class="col-4">Column</div>
-                <div class="col-4">Column</div>
-                <div class="col-4">Column</div>
-                <div class="col-4">Column</div>
-                <div class="col-4">Column</div>
+            <div class="row g-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/icons/autos2.svg" class="w-100 text-center width-servicios" alt="">
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="btn btn-outline-primary w-100">Contactar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
