--- a/index.html
+++ b/index.html
@@ -123,54 +123,194 @@
 
         <section id="nuestros-servicios" class="container">
             <h2>Nuestros Servicios</h2>
-            <h3>Atendemos en Neuquén y Río Negro</h3>
+            <h3>Atendemos en Neuquén Capital</h3>
             <div class="row g-4 d-flex justify-content-center">
                 <div class="col-12 col-md-6 col-xl-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="img/icons/autos2.svg" class="w-100 text-center width-servicios" alt="">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn btn-outline-primary w-100">Contactar</a>
+                    <div class="card h-100 border-0" style="background-color: #f4f4f4">
+                        <div class="card-body my-3 d-flex flex-column justify-content-between">
+                            <div>
+
+                                <div class="text-center">
+                                    <img src="img/icons/autos.svg" class="w-100 py-3 m-auto width-servicios" alt="">
+                            </div>
+                            <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                            <ul class="list-group list-group-flush py-3">
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños materiales al vehículo o rodado
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños físicos o psicológicos
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por incapacidad
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                                </li>
+                            </ul>
+                        </div>
+                            <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card h-100 border-0" style="background-color: #f4f4f4">
+                        <div class="card-body my-3 d-flex flex-column justify-content-between">
+                            <div>
+
+                                <div class="text-center">
+                                    <img src="img/icons/familia.svg" class="w-100 py-3 m-auto width-servicios" alt="">
+                            </div>
+                            <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                            <ul class="list-group list-group-flush py-3">
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños materiales al vehículo o rodado
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños físicos o psicológicos
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por incapacidad
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                                </li>
+                            </ul>
+                        </div>
+                            <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card h-100 border-0" style="background-color: #f4f4f4">
+                        <div class="card-body my-3 d-flex flex-column justify-content-between">
+                            <div>
+
+                                <div class="text-center">
+                                    <img src="img/icons/martillo.svg" class="w-100 py-3 m-auto width-servicios" alt="">
+                            </div>
+                            <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                            <ul class="list-group list-group-flush py-3">
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños materiales al vehículo o rodado
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños físicos o psicológicos
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por incapacidad
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                                </li>
+                            </ul>
+                        </div>
+                            <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card h-100 border-0" style="background-color: #f4f4f4">
+                        <div class="card-body my-3 d-flex flex-column justify-content-between">
+                            <div>
+
+                                <div class="text-center">
+                                    <img src="img/icons/sucesion.svg" class="w-100 py-3 m-auto width-servicios" alt="">
+                            </div>
+                            <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                            <ul class="list-group list-group-flush py-3">
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños materiales al vehículo o rodado
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños físicos o psicológicos
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por incapacidad
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                                </li>
+                            </ul>
+                        </div>
+                            <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-xl-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card h-100 border-0" style="background-color: #f4f4f4">
+                        <div class="card-body my-3 d-flex flex-column justify-content-between">
+                            <div>
+
+                                <div class="text-center">
+                                    <img src="img/icons/trabajo.svg" class="w-100 py-3 m-auto width-servicios" alt="">
+                            </div>
+                            <h4 class="card-title text-center fs-3 pt-2">Accidentes de tránsito</h4>
+                            <ul class="list-group list-group-flush pb-3">
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños materiales al vehículo o rodado
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos por daños físicos o psicológicos
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por incapacidad
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                                </li>
+                                <li class="list-group-item" style="background-color: #f4f4f4">
+                                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                                </li>
+                            </ul>
+                        </div>
+                            <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
                         </div>
                     </div>
                 </div>
+                
             </div>
         </section>
 
