--- a/index.html
+++ b/index.html
@@ -378,16 +378,16 @@
         <section id="contacto" class="container">
             <div class="row">
                 <div class="col-12 col-md-6 py-3">
-                    <h2 class="pb-3">Contacto</h2>
+                    <h2 class="pb-3 ">Contacto</h2>
                     <p>Matías Nordenstrom Estudio Jurídico</p>
                     <p>Neuquén, Neuquén.</p>
                     <p> Telefono: (299) 603-7510</p>
                     <p> Email: matias.correanqn@gmail.com</p>
-                    <p>Lunes a Viernes de 9 a 17hs.</p>
+                    <p>Lunes a Viernes de 10:30 a 19hs.</p>
 
                 </div>
                 <div class="col-12 col-md-6 py-3">
-                    <h3 class="pb-3">Envia tu mensaje</h3>
+                    <h3 class="pb-3" >Envia tu mensaje</h3>
                     <div class="form-floating mb-3">
                         <input type="email" class="form-control" id="nombre" placeholder="Maria">
                         <label for="nombre">Nombre</label>
@@ -426,10 +426,10 @@
                 </div>
                 <div class="col">
                     <h3 class="pb-3">CONTACTO</h3>
-                    <p>estudiolopezantonella@gmail.com</p>
-                    <p>Juan B. Justo 730, Neuquen</p>
-                    <p>0299 155068282</p>
-                    <p>+5492995068282</p>
+                    <p>matias.correanqn@gmail.com</p>
+                    <p>Neuquén</p>
+                    <p>299 603-7510</p>
+
                 </div>
                 <div class="col">
                     <h3 class="text-center pb-3">REDES</h3>
