--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
+              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
+              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -239,7 +239,7 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
+              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -279,7 +279,7 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
+              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -319,7 +319,7 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-outline-dark w-100 ">Contactar</a>
+              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -328,7 +328,7 @@
     </section>
 
     <section id="honorarios" class="container py-5">
-      <div class="row">
+      <div class="row gx-5">
         <h2>Honorarios</h2>
         <div class="col d-flex flex-column justify-content-center">
           <div class="fondo-gold py-4 text-center mb-1">
@@ -342,19 +342,19 @@
         <div class="col">
           <p class="fs-4">Se bonifica el importe de la primera consulta al iniciar el trámite con nosotros.</p>
           <hr>
-          <p class="fs-4">Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar
-            los honorarios profesionales por el servicio jurídico prestado.</p>
+          <p class="fs-4">Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar los honorarios profesionales por el servicio jurídico prestado.</p>
           <hr>
-          <p class="fs-4">Los abogados nos regimos por la Ley de honorarios, en Neuquén es la Ley N°1594 y en Rio Negro
-            es la Ley N°2212</p>
-          <div class="row">
-            <div class="col">Ley 1</div>
-            <div class="col">ley 2</div>
+          <p class="fs-4">Los abogados nos regimos por la Ley de honorarios, en Neuquén es la Ley N°1594 y en Rio Negro es la Ley N°2212</p>
+          <div class="row gx-4">
+            <div class="col">
+              <div class="fondo-gold py-3 fs-5 text-white text-center">Ley 1</div>
+            </div>
+            <div class="col">
+              <div class="fondo-gold py-3 fs-5 text-white text-center">Ley 2</div>
+            </div>
           </div>
         </div>
-        <p class="text-center pt-5">Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán
-          encontrarlo publicado en los colegios de abogados de cada provincia. Si tienen alguna consulta, no duden en
-          comunicarse con nosotros para asesorarse.</p>
+        <p class="text-center pt-5">Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán encontrarlo publicado en los colegios de abogados de cada provincia. Si tienen alguna consulta, no duden en comunicarse con nosotros para asesorarse.</p>
       </div>
     </section>
 
@@ -388,7 +388,7 @@
             <label for="mensaje">Mensaje</label>
           </div>
           <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-outline-dark px-4">Enviar</button>
+            <button type="submit" class="btn btn-dark px-4">Enviar</button>
           </div>
         </div>
       </div>
