--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
   <footer class="container-fluid fondo-dark py-4">
     <div class="container text-white mt-2">
       <div class="row justify-content-center g-2">
-        <div class="col">
+        <div class="col-12 col-md-4 text-center text-md-start">
           <h3 class="pb-3">MATÍAS NORDENSTROM</h3>
           <p>Bienvenido</p>
           <p>Quienes somos</p>
@@ -418,30 +418,22 @@
           <p>Honorarios</p>
           <p>Contacto</p>
         </div>
-        <div class="col">
+        <div class="col-12 col-md-4 text-center text-md-start">
           <h3 class="pb-3">CONTACTO</h3>
           <p>matias.correanqn@gmail.com</p>
           <p>Neuquén</p>
           <p>299 603-7510</p>
 
         </div>
-        <div class="col">
-          <h3 class="text-center pb-3">REDES</h3>
+        <div class="col-12 col-md-4 text-center text-md-start">
+          <h3 class="pb-3">REDES</h3>
 
-          <ul class="nav justify-content-center  ">
-            <li class="nav-item">
-              <a class="nav-link fs-3 text-gold" href="#"><i class="bi bi-whatsapp"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fs-3 text-gold" href="#"><i class="bi bi-twitter"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fs-3 text-gold" href="#"><i class="bi bi-facebook"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fs-3 text-gold" href="#"><i class="bi bi-linkedin"></i></a>
-            </li>
-          </ul>
+          <div class="d-flex justify-content-center justify-content-md-start">
+            <a class="nav-link fs-3 text-gold pe-4" href="#"><i class="bi bi-whatsapp"></i></a>
+            <a class="nav-link fs-3 text-gold pe-4" href="#"><i class="bi bi-twitter"></i></a>
+            <a class="nav-link fs-3 text-gold pe-4" href="#"><i class="bi bi-facebook"></i></a>
+            <a class="nav-link fs-3 text-gold" href="#"><i class="bi bi-linkedin"></i></a>
+          </div>
 
         </div>
       </div>
