--- a/index.html
+++ b/index.html
@@ -343,9 +343,11 @@
         <div class="col">
           <p class="fs-4">Se bonifica el importe de la primera consulta al iniciar el trámite con nosotros.</p>
           <hr>
-          <p class="fs-4">Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar los honorarios profesionales por el servicio jurídico prestado.</p>
+          <p class="fs-4">Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar
+            los honorarios profesionales por el servicio jurídico prestado.</p>
           <hr>
-          <p class="fs-4">Los abogados nos regimos por la Ley de honorarios, en Neuquén es la Ley N°1594 y en Rio Negro es la Ley N°2212</p>
+          <p class="fs-4">Los abogados nos regimos por la Ley de honorarios, en Neuquén es la Ley N°1594 y en Rio Negro
+            es la Ley N°2212</p>
           <div class="row gx-4">
             <div class="col">
               <div class="fondo-gold py-3 fs-5 text-white text-center">Ley 1</div>
@@ -355,7 +357,9 @@
             </div>
           </div>
         </div>
-        <p class="text-center pt-5">Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán encontrarlo publicado en los colegios de abogados de cada provincia. Si tienen alguna consulta, no duden en comunicarse con nosotros para asesorarse.</p>
+        <p class="text-center pt-5">Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán
+          encontrarlo publicado en los colegios de abogados de cada provincia. Si tienen alguna consulta, no duden en
+          comunicarse con nosotros para asesorarse.</p>
       </div>
     </section>
 
@@ -372,27 +376,31 @@
         </div>
         <div class="col-12 col-md-6 py-3">
           <h3 class="pb-3">Envia tu mensaje</h3>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="nombre" placeholder="Maria">
-            <label for="nombre">Nombre</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="email" placeholder="name@example.com">
-            <label for="email">Email</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="telefono" placeholder="299 1111111">
-            <label for="telefono">Telefono</label>
-          </div>
-          <div class="form-floating mb-3">
-            <textarea class="form-control" id="mensaje" placeholder="Su mensaje" style="height: 100px"></textarea>
-            <label for="mensaje">Mensaje</label>
-          </div>
-          <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-dark px-4">Enviar</button>
-          </div>
+          <form action="">
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" id="nombre" placeholder="Maria" required>
+              <label for="nombre">Nombre</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+              <label for="email">Email</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" id="telefono" placeholder="299 1111111" required>
+              <label for="telefono">Telefono</label>
+            </div>
+            <div class="form-floating mb-3">
+              <textarea class="form-control" id="mensaje" placeholder="Su mensaje" style="height: 100px"
+                required></textarea>
+              <label for="mensaje">Mensaje</label>
+            </div>
+            <div class="d-flex justify-content-end">
+              <button type="submit" class="btn btn-dark px-4">Enviar</button>
+            </div>
+          </form>
         </div>
       </div>
+
     </section>
 
     <!-- Boton Whatsapp -->
