--- a/index.html
+++ b/index.html
@@ -329,9 +329,9 @@
     </section>
 
     <section id="honorarios" class="container py-5">
-      <div class="row gx-5">
+      <div class="row g-5">
         <h2>Honorarios</h2>
-        <div class="col d-flex flex-column justify-content-center">
+        <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
           <div class="fondo-gold py-4 text-center mb-1">
             <span class="text-white fs-3 fw-bold">Gastos Iniciales Bonificados</span>
           </div>
@@ -340,7 +340,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-12 col-md-6">
           <p class="fs-4">Se bonifica el importe de la primera consulta al iniciar el trámite con nosotros.</p>
           <hr>
           <p class="fs-4">Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar los honorarios profesionales por el servicio jurídico prestado.</p>
