--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg fondo-dark">
+    <nav class="navbar navbar-expand-lg fondo-dark border-bottom border-bottom-dark" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand mx-3 text-white" id="titulo" href="#"><img src="img/MATÍAS NORDENSTROM.png" alt=""
             style="max-width: 200px;"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
