quienes somos con responsive

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </header>
 
   <main>
-    <section id="hero" class="container">
+    <section id="hero" class="container pb-5">
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -102,25 +102,25 @@
       </div>
     </section>
 
-    <section id="quienes-somos" class="container">
+    <section id="quienes-somos" class="container pb-5">
       <div class="row">
-        <div class="col">
-          <h2>Quienes somos</h2>
-          <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en
-            la
-            confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y
-            oportuna de
-            cualquier tipo de controversia o contingencia que puedan experimentar nuestros clientes.</p>
-          <p>Nos esforzamos para representar a nuestros clientes de la mejor manera posible, tanto en la
-            instancia
-            extrajudicial, como judicialmente.</p>
-          <button>Conozca mas</button>
+        <h2>Quienes somos</h2>
+        <div class="col-12 col-lg-6 d-flex flex-column justify-content-between py-3">
+          <div class="fs-5">
+            <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en la confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y oportuna de cualquier tipo de controversia o contingencia que puedan experimentar nuestros clientes.</p>
+            <p>Nos esforzamos para representar a nuestros clientes de la mejor manera posible, tanto en la instancia extrajudicial, como judicialmente.</p>
+          </div>
+          <div class="d-flex justify-content-end">
+            <button type="button" class="btn btn-dark px-5">Conozca más</button>
+          </div>
         </div>
-        <div class="col">Imagen</div>
+        <div class="col-12 col-lg-6">
+          <img class="w-100" src="img/quienes-somos-2.jpg" alt="">
+        </div>
       </div>
     </section>
 
-    <section id="nuestros-servicios" class="container">
+    <section id="nuestros-servicios" class="container pb-5">
       <h2>Nuestros Servicios</h2>
       <h3>Atendemos en Neuquén Capital</h3>
       <div class="row g-4 d-flex justify-content-center">
@@ -328,7 +328,7 @@
       </div>
     </section>
 
-    <section id="honorarios" class="container py-5">
+    <section id="honorarios" class="container pb-5">
       <div class="row g-5">
         <h2>Honorarios</h2>
         <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
@@ -363,7 +363,7 @@
       </div>
     </section>
 
-    <section id="contacto" class="container">
+    <section id="contacto" class="container pb-5">
       <div class="row">
         <div class="col-12 col-md-6 py-3">
           <h2 class="pb-3 ">Contacto</h2>
